Fix card flickering

--- a/src/games/Uno/components/Stacks.scss
+++ b/src/games/Uno/components/Stacks.scss
@@ -127,6 +127,6 @@
   transition: all 300ms ease-in-out;
 }
 
-.place-card-leave {
+.place-card-exit {
   z-index: -1;
 }
